--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,32 @@
       </ul>
     </header>
 
-    <main></main>
+    <main>
+      <section>
+        <ul>
+          <li>
+            <img src="./images/igor.jpg" alt="Igor" width="270" />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/olga.jpg" alt="Olga" width="270" />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/mike.jpg" alt="Nikolai" width="270" />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/michael.jpg" alt="Michael" width="270" />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <footer>
       <a href="./index.html"><span>Web</span>Studio</a>
