--- a/portfolio.html
+++ b/portfolio.html
@@ -26,24 +26,69 @@
       <section>
         <ul>
           <li>
-            <img src="./images/igor.jpg" alt="Igor" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <img
+              src="./images/technocrack.jpg"
+              alt="Technocrack example of web"
+              width="370"
+            />
+            <h3>Технокряк</h3>
+            <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/olga.jpg" alt="Olga" width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <img
+              src="./images/poster.jpg"
+              alt="Poster New Orlean VS Golden star example of designe"
+              width="370"
+            />
+            <h3>Постер New Orlean vs Golden Star</h3>
+            <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/mike.jpg" alt="Nikolai" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <img
+              src="./images/restaurant.jpg"
+              alt="example of app"
+              width="370"
+            />
+            <h3>Ресторан Seafood</h3>
+            <p>Приложение</p>
           </li>
           <li>
-            <img src="./images/michael.jpg" alt="Michael" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <img src="./images/prime.jpg" alt="Project Prime" width="370" />
+            <h3>Проект Prime</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/boxes.jpg" alt="Project Boxes" width="370" />
+            <h3>Проект Boxes</h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img
+              src="./images/inspiration.jpg"
+              alt="Web Inspiration has no Borders example of work"
+              width="370"
+            />
+            <h3>Inspiration has no Borders</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/limited edition.jpg"
+              alt="example of designe"
+              width="370"
+            />
+            <h3>Издание Limited Edition</h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/lab.jpg" alt="Project LAB" width="370" />
+            <h3>Проект LAB</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/business.jpg" alt="example of app" width="370" />
+            <h3>Growing Business</h3>
+            <p>Приложение</p>
           </li>
         </ul>
       </section>
