--- a/portfolio.html
+++ b/portfolio.html
@@ -21,72 +21,94 @@
         <li><a href="tel:+380961111111">+380961111111</a></li>
       </ul>
     </header>
-
     <main>
       <section>
         <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложение</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+        <ul>
           <li>
-            <img
-              src="./images/technocrack.jpg"
-              alt="Technocrack example of web"
-              width="370"
-            />
+            <a href=""
+              ><img
+                src="./images/technocrack.jpg"
+                alt="Technocrack example of web"
+                width="370"
+            /></a>
             <h3>Технокряк</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img
-              src="./images/poster.jpg"
-              alt="Poster New Orlean VS Golden star example of designe"
-              width="370"
-            />
+            <a href="">
+              <img
+                src="./images/poster.jpg"
+                alt="Poster New Orlean VS Golden star example of designe"
+                width="370"
+            /></a>
             <h3>Постер New Orlean vs Golden Star</h3>
             <p>Дизайн</p>
           </li>
           <li>
-            <img
-              src="./images/restaurant.jpg"
-              alt="example of app"
-              width="370"
-            />
+            <a href="">
+              <img
+                src="./images/restaurant.jpg"
+                alt="example of app"
+                width="370"
+            /></a>
             <h3>Ресторан Seafood</h3>
             <p>Приложение</p>
           </li>
           <li>
-            <img src="./images/prime.jpg" alt="Project Prime" width="370" />
+            <a href=""
+              ><img src="./images/prime.jpg" alt="Project Prime" width="370"
+            /></a>
             <h3>Проект Prime</h3>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/boxes.jpg" alt="Project Boxes" width="370" />
+            <a href=""
+              ><img src="./images/boxes.jpg" alt="Project Boxes" width="370"
+            /></a>
             <h3>Проект Boxes</h3>
             <p>Приложение</p>
           </li>
           <li>
-            <img
-              src="./images/inspiration.jpg"
-              alt="Web Inspiration has no Borders example of work"
-              width="370"
-            />
+            <a href=""
+              ><img
+                src="./images/inspiration.jpg"
+                alt="Web Inspiration has no Borders example of work"
+                width="370"
+            /></a>
             <h3>Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img
-              src="./images/limited edition.jpg"
-              alt="example of designe"
-              width="370"
-            />
+            <a href=""
+              ><img
+                src="./images/limited edition.jpg"
+                alt="example of designe"
+                width="370"
+            /></a>
             <h3>Издание Limited Edition</h3>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/lab.jpg" alt="Project LAB" width="370" />
+            <a href=""
+              ><img src="./images/lab.jpg" alt="Project LAB" width="370"
+            /></a>
             <h3>Проект LAB</h3>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/business.jpg" alt="example of app" width="370" />
+            <a href=""
+              ><img
+                src="./images/business.jpg"
+                alt="example of app"
+                width="370"
+            /></a>
             <h3>Growing Business</h3>
             <p>Приложение</p>
           </li>
