--- a/index.html
+++ b/index.html
@@ -4,28 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webstudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles/styles.css" />
+    <title>Webstudio</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html"><span>Web</span>Studio</a>
+        <a class="links logo-studio" href="./index.html"
+          ><span class="logo-web">Web</span>Studio</a
+        >
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a class="links" href="">Студия</a></li>
+          <li><a class="links" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="links" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+380961111111</a></li>
+        <li>
+          <a class="links" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li><a class="links" href="tel:+380961111111">+380961111111</a></li>
       </ul>
     </header>
     <main>
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <button type="button" class="button-buy">Заказать услугу</button>
       </section>
       <section>
         <h2>Наши цели</h2>
@@ -95,19 +107,26 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
+      <a class="links logo-studio" href="./index.html"
+        ><span class="logo-web">Web</span>Studio</a
+      >
       <address>
         <ul>
           <li>
             <a
+              class="links"
               href="https://goo.gl/maps/Q2CxQmNGnSaNy8GW7"
               target="_blank"
               rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+380961111111</a></li>
+          <li>
+            <a class="links" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li><a class="links" href="tel:+380961111111">+380961111111</a></li>
         </ul>
       </address>
     </footer>
