--- a/portfolio.html
+++ b/portfolio.html
@@ -4,132 +4,214 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <title>Document</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html"><span>Web</span>Studio</a>
+        <a class="links logo-studio" href="./index.html"
+          ><span class="logo-web">Web</span>Studio</a
+        >
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a class="links" href="">Студия</a></li>
+          <li><a class="links" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="links" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+380961111111</a></li>
+        <li>
+          <a class="links" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li><a class="links" href="tel:+380961111111">+380961111111</a></li>
       </ul>
     </header>
     <main>
       <section>
+        <h1>Типи работ</h1>
         <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложение</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button type="button" class="button">Все</button></li>
+          <li><button type="button" class="button">Веб-сайты</button></li>
+          <li><button type="button" class="button">Приложение</button></li>
+          <li><button type="button" class="button">Дизайн</button></li>
+          <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
         <ul>
           <li>
-            <a href=""
+            <a class="links" href=""
               ><img
                 src="./images/technocrack.jpg"
                 alt="Technocrack example of web"
                 width="370"
-            /></a>
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+              />
+              <h3>Технокряк</h3>
+              <p>Веб-сайт</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
+                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
+                dolore nesciunt possimus temporibus?
+              </p>
+            </a>
           </li>
           <li>
-            <a href="">
+            <a class="links" href="">
               <img
                 src="./images/poster.jpg"
                 alt="Poster New Orlean VS Golden star example of designe"
                 width="370"
-            /></a>
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+              />
+              <h3>Постер New Orlean vs Golden Star</h3>
+              <p>Дизайн</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
+                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
+                dolore nesciunt possimus temporibus?
+              </p>
+            </a>
           </li>
+
           <li>
-            <a href="">
+            <a class="links" href="">
               <img
                 src="./images/restaurant.jpg"
                 alt="example of app"
                 width="370"
-            /></a>
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
+              />
+              <h3>Ресторан Seafood</h3>
+              <p>Приложение</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
+                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
+                dolore nesciunt possimus temporibus?
+              </p>
+            </a>
           </li>
           <li>
-            <a href=""
-              ><img src="./images/prime.jpg" alt="Project Prime" width="370"
-            /></a>
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
+            <a class="links" href=""
+              ><img src="./images/prime.jpg" alt="Project Prime" width="370" />
+              <h3>Проект Prime</h3>
+              <p>Маркетинг</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
+                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
+                dolore nesciunt possimus temporibus?
+              </p>
+            </a>
           </li>
           <li>
-            <a href=""
-              ><img src="./images/boxes.jpg" alt="Project Boxes" width="370"
-            /></a>
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
+            <a class="links" href=""
+              ><img src="./images/boxes.jpg" alt="Project Boxes" width="370" />
+              <h3>Проект Boxes</h3>
+              <p>Приложение</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
+                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
+                dolore nesciunt possimus temporibus?
+              </p>
+            </a>
           </li>
           <li>
-            <a href=""
+            <a class="links" href=""
               ><img
                 src="./images/inspiration.jpg"
                 alt="Web Inspiration has no Borders example of work"
                 width="370"
-            /></a>
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+              />
+              <h3>Inspiration has no Borders</h3>
+              <p>Веб-сайт</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
+                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
+                dolore nesciunt possimus temporibus?
+              </p>
+            </a>
           </li>
           <li>
-            <a href=""
+            <a class="links" href=""
               ><img
                 src="./images/limited edition.jpg"
                 alt="example of designe"
                 width="370"
-            /></a>
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
+              />
+              <h3>Издание Limited Edition</h3>
+              <p>Дизайн</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
+                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
+                dolore nesciunt possimus temporibus?
+              </p>
+            </a>
           </li>
           <li>
-            <a href=""
-              ><img src="./images/lab.jpg" alt="Project LAB" width="370"
-            /></a>
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <a class="links" href=""
+              ><img src="./images/lab.jpg" alt="Project LAB" width="370" />
+              <h3>Проект LAB</h3>
+              <p>Маркетинг</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
+                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
+                dolore nesciunt possimus temporibus?
+              </p>
+            </a>
           </li>
           <li>
-            <a href=""
+            <a class="links" href=""
               ><img
                 src="./images/business.jpg"
                 alt="example of app"
                 width="370"
-            /></a>
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
+              />
+              <h3>Growing Business</h3>
+              <p>Приложение</p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
+                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
+                dolore nesciunt possimus temporibus?
+              </p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
+      <a class="links logo-studio" href="./index.html"
+        ><span class="logo-web">Web</span>Studio</a
+      >
       <address>
         <ul>
           <li>
             <a
+              class="links"
               href="https://goo.gl/maps/Q2CxQmNGnSaNy8GW7"
               target="_blank"
               rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+380961111111</a></li>
+          <li>
+            <a class="links" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li><a class="links" href="tel:+380961111111">+380961111111</a></li>
         </ul>
       </address>
     </footer>
