--- a/index.html
+++ b/index.html
@@ -14,121 +14,135 @@
     <title>Webstudio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a class="links logo-studio" href="./index.html"
-          ><span class="logo-web">Web</span>Studio</a
-        >
-        <ul>
-          <li><a class="links" href="">Студия</a></li>
-          <li><a class="links" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="links" href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li>
-          <a class="links" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
+    <div class="main">
+      <header class="header">
+        <nav>
+          <a class="links logo-studio" href="./index.html"
+            ><span class="logo-web">Web</span>Studio</a
           >
-        </li>
-        <li><a class="links" href="tel:+380961111111">+380961111111</a></li>
-      </ul>
-    </header>
-    <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="button-buy">Заказать услугу</button>
-      </section>
-      <section>
-        <h2>Наши цели</h2>
+          <ul>
+            <li><a class="links" href="">Студия</a></li>
+            <li><a class="links" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="links" href="">Контакты</a></li>
+          </ul>
+        </nav>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li><img src="./images/box1.jpg" alt="analyze" width="370" /></li>
-          <li><img src="./images/box2.jpg" alt="check" width="370" /></li>
-          <li><img src="./images/box3.jpg" alt="show" width="370" /></li>
-        </ul>
-      </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/igor.jpg" alt="Igor" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/olga.jpg" alt="Olga" width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/mike.jpg" alt="Nikolai" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./images/michael.jpg" alt="Michael" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      <a class="links logo-studio" href="./index.html"
-        ><span class="logo-web">Web</span>Studio</a
-      >
-      <address>
-        <ul>
-          <li>
-            <a
-              class="links"
-              href="https://goo.gl/maps/Q2CxQmNGnSaNy8GW7"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a class="links" href="mailto:info@devstudio.com"
+            <a class="contact-header" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li><a class="links" href="tel:+380961111111">+380961111111</a></li>
+          <li>
+            <a class="contact-header" href="tel:+380961111111">+380961111111</a>
+          </li>
         </ul>
-      </address>
-    </footer>
+      </header>
+      <main>
+        <section class="hero">
+          <h1 class="hero-title">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button type="button" class="button-buy">Заказать услугу</button>
+        </section>
+        <div>
+        <section class="our-target">
+          <h2 hidden>Наши цели</h2>
+          <ul>
+            <li>
+              <h3>Внимание к деталям</h3>
+              <p class="target-description">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h3>Пунктуальность</h3>
+              <p class="target-description">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h3>Планирование</h3>
+              <p class="target-description">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h3>Современные технологии</h3>
+              <p class="target-description">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </section>
+        <section class="analyze">
+          <h2>Чем мы занимаемся</h2>
+          <ul>
+            <li><img src="./images/box1.jpg" alt="analyze" width="370" /></li>
+            <li><img src="./images/box2.jpg" alt="check" width="370" /></li>
+            <li><img src="./images/box3.jpg" alt="show" width="370" /></li>
+          </ul>
+        </section>
+        <section class="team">
+          <h2>Наша команда</h2>
+          <ul>
+            <li>
+              <img src="./images/igor.jpg" alt="Igor" width="270" />
+              <h3>Игорь Демьяненко</h3>
+              <p class="descreption-user">Product Designer</p>
+            </li>
+            <li>
+              <img src="./images/olga.jpg" alt="Olga" width="270" />
+              <h3>Ольга Репина</h3>
+              <p class="descreption-user">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="./images/mike.jpg" alt="Nikolai" width="270" />
+              <h3>Николай Тарасов</h3>
+              <p class="descreption-user">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/michael.jpg" alt="Michael" width="270" />
+              <h3>Михаил Ермаков</h3>
+              <p class="descreption-user">UI Designer</p>
+            </li>
+          </ul>
+        </section>
+      </main>
+      <footer class="footer">
+        <a class="links-footer logo-studio" href="./index.html"
+          ><span class="logo-web">Web</span>Studio</a
+        >
+        <address class="footer-address">
+          <ul>
+            <li>
+              <a
+                class="links-footer"
+                href="https://goo.gl/maps/Q2CxQmNGnSaNy8GW7"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li>
+              <a
+                class="links-footer contact-footer"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="links-footer contact-footer" href="tel:+380961111111"
+                >+380961111111</a
+              >
+            </li>
+          </ul>
+        </address>
+      </footer>
+    </div>
   </body>
 </html>
