--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <a class="links logo-studio" href="./index.html"
           ><span class="logo-web">Web</span>Studio</a
@@ -27,11 +27,13 @@
       </nav>
       <ul>
         <li>
-          <a class="links" href="mailto:info@devstudio.com"
+          <a class="contact-header" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li><a class="links" href="tel:+380961111111">+380961111111</a></li>
+        <li>
+          <a class="contact-header" href="tel:+380961111111">+380961111111</a>
+        </li>
       </ul>
     </header>
     <main>
@@ -53,7 +55,7 @@
                 width="370"
               />
               <h3>Технокряк</h3>
-              <p>Веб-сайт</p>
+              <p class="description-project">Веб-сайт</p>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
@@ -70,7 +72,7 @@
                 width="370"
               />
               <h3>Постер New Orlean vs Golden Star</h3>
-              <p>Дизайн</p>
+              <p class="description-project">Дизайн</p>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
@@ -88,7 +90,7 @@
                 width="370"
               />
               <h3>Ресторан Seafood</h3>
-              <p>Приложение</p>
+              <p class="description-project">Приложение</p>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
@@ -101,7 +103,7 @@
             <a class="links" href=""
               ><img src="./images/prime.jpg" alt="Project Prime" width="370" />
               <h3>Проект Prime</h3>
-              <p>Маркетинг</p>
+              <p class="description-project">Маркетинг</p>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
@@ -114,7 +116,7 @@
             <a class="links" href=""
               ><img src="./images/boxes.jpg" alt="Project Boxes" width="370" />
               <h3>Проект Boxes</h3>
-              <p>Приложение</p>
+              <p class="description-project">Приложение</p>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
@@ -131,7 +133,7 @@
                 width="370"
               />
               <h3>Inspiration has no Borders</h3>
-              <p>Веб-сайт</p>
+              <p class="description-project">Веб-сайт</p>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
@@ -148,7 +150,7 @@
                 width="370"
               />
               <h3>Издание Limited Edition</h3>
-              <p>Дизайн</p>
+              <p class="description-project">Дизайн</p>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
@@ -161,7 +163,7 @@
             <a class="links" href=""
               ><img src="./images/lab.jpg" alt="Project LAB" width="370" />
               <h3>Проект LAB</h3>
-              <p>Маркетинг</p>
+              <p class="description-project">Маркетинг</p>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
@@ -178,7 +180,7 @@
                 width="370"
               />
               <h3>Growing Business</h3>
-              <p>Приложение</p>
+              <p class="description-project">Приложение</p>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
@@ -191,15 +193,15 @@
       </section>
     </main>
 
-    <footer>
-      <a class="links logo-studio" href="./index.html"
+    <footer class="footer">
+      <a class="links-footer logo-studio" href="./index.html"
         ><span class="logo-web">Web</span>Studio</a
       >
-      <address>
+      <address class="footer-address">
         <ul>
           <li>
             <a
-              class="links"
+              class="links-footer"
               href="https://goo.gl/maps/Q2CxQmNGnSaNy8GW7"
               target="_blank"
               rel="noopener noreferrer"
@@ -207,11 +209,17 @@
             >
           </li>
           <li>
-            <a class="links" href="mailto:info@devstudio.com"
+            <a
+              class="links-footer contact-footer"
+              href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li><a class="links" href="tel:+380961111111">+380961111111</a></li>
+          <li>
+            <a class="links-footer contact-footer" href="tel:+380961111111"
+              >+380961111111</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
