updated after check
revised CSS doc

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,16 +16,16 @@
   <body>
     <header class="header">
       <nav>
-        <a class="links logo-studio" href="./index.html"
+        <a class="logo-studio" href="./index.html"
           ><span class="logo-web">Web</span>Studio</a
         >
-        <ul>
+        <ul class="lists">
           <li><a class="links" href="">Студия</a></li>
           <li><a class="links" href="./portfolio.html">Портфолио</a></li>
           <li><a class="links" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="lists">
         <li>
           <a class="contact-header" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
@@ -38,155 +38,100 @@
     </header>
     <main>
       <section>
-        <h1>Типи работ</h1>
-        <ul>
+        <h1 class="visually-hidden">Типи работ</h1>
+        <ul class="lists">
           <li><button type="button" class="button">Все</button></li>
           <li><button type="button" class="button">Веб-сайты</button></li>
           <li><button type="button" class="button">Приложение</button></li>
           <li><button type="button" class="button">Дизайн</button></li>
           <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="lists">
           <li>
-            <a class="links" href=""
+            <a class="links-posters" href=""
               ><img
                 src="./images/technocrack.jpg"
                 alt="Technocrack example of web"
                 width="370"
               />
-              <h3>Технокряк</h3>
+              <h3 class="posters">Технокряк</h3>
               <p class="description-project">Веб-сайт</p>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
-                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
-                dolore nesciunt possimus temporibus?
-              </p>
             </a>
           </li>
           <li>
-            <a class="links" href="">
+            <a class="links-posters" href="">
               <img
                 src="./images/poster.jpg"
                 alt="Poster New Orlean VS Golden star example of designe"
                 width="370"
               />
-              <h3>Постер New Orlean vs Golden Star</h3>
+              <h3 class="posters">Постер New Orlean vs Golden Star</h3>
               <p class="description-project">Дизайн</p>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
-                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
-                dolore nesciunt possimus temporibus?
-              </p>
             </a>
           </li>
-
           <li>
-            <a class="links" href="">
+            <a class="links-posters" href="">
               <img
                 src="./images/restaurant.jpg"
                 alt="example of app"
                 width="370"
               />
-              <h3>Ресторан Seafood</h3>
+              <h3 class="posters">Ресторан Seafood</h3>
               <p class="description-project">Приложение</p>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
-                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
-                dolore nesciunt possimus temporibus?
-              </p>
             </a>
           </li>
           <li>
-            <a class="links" href=""
+            <a class="links-posters" href=""
               ><img src="./images/prime.jpg" alt="Project Prime" width="370" />
-              <h3>Проект Prime</h3>
+              <h3 class="posters">Проект Prime</h3>
               <p class="description-project">Маркетинг</p>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
-                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
-                dolore nesciunt possimus temporibus?
-              </p>
             </a>
           </li>
           <li>
-            <a class="links" href=""
+            <a class="links-posters" href=""
               ><img src="./images/boxes.jpg" alt="Project Boxes" width="370" />
-              <h3>Проект Boxes</h3>
+              <h3 class="posters">Проект Boxes</h3>
               <p class="description-project">Приложение</p>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
-                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
-                dolore nesciunt possimus temporibus?
-              </p>
             </a>
           </li>
           <li>
-            <a class="links" href=""
+            <a class="links-posters" href=""
               ><img
                 src="./images/inspiration.jpg"
                 alt="Web Inspiration has no Borders example of work"
                 width="370"
               />
-              <h3>Inspiration has no Borders</h3>
+              <h3 class="posters">Inspiration has no Borders</h3>
               <p class="description-project">Веб-сайт</p>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
-                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
-                dolore nesciunt possimus temporibus?
-              </p>
             </a>
           </li>
           <li>
-            <a class="links" href=""
+            <a class="links-posters" href=""
               ><img
                 src="./images/limited edition.jpg"
                 alt="example of designe"
                 width="370"
               />
-              <h3>Издание Limited Edition</h3>
+              <h3 class="posters">Издание Limited Edition</h3>
               <p class="description-project">Дизайн</p>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
-                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
-                dolore nesciunt possimus temporibus?
-              </p>
             </a>
           </li>
           <li>
-            <a class="links" href=""
+            <a class="links-posters" href=""
               ><img src="./images/lab.jpg" alt="Project LAB" width="370" />
-              <h3>Проект LAB</h3>
+              <h3 class="posters">Проект LAB</h3>
               <p class="description-project">Маркетинг</p>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
-                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
-                dolore nesciunt possimus temporibus?
-              </p>
             </a>
           </li>
           <li>
-            <a class="links" href=""
+            <a class="links-posters" href=""
               ><img
                 src="./images/business.jpg"
                 alt="example of app"
                 width="370"
               />
-              <h3>Growing Business</h3>
+              <h3 class="posters">Growing Business</h3>
               <p class="description-project">Приложение</p>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Explicabo, voluptatem doloremque. Ab enim maiores et labore quos
-                ipsum provident sint error qui? Esse reiciendis aperiam aliquam
-                dolore nesciunt possimus temporibus?
-              </p>
             </a>
           </li>
         </ul>
@@ -194,11 +139,11 @@
     </main>
 
     <footer class="footer">
-      <a class="links-footer logo-studio" href="./index.html"
+      <a class="logo-studio-footer" href="./index.html"
         ><span class="logo-web">Web</span>Studio</a
       >
       <address class="footer-address">
-        <ul>
+        <ul class="lists">
           <li>
             <a
               class="links-footer"
