--- a/portfolio.html
+++ b/portfolio.html
@@ -16,20 +16,16 @@
   <body>
     <header class="header">
       <nav>
-        <a class="logo-studio" href="./index.html"
-          ><span class="logo-web">Web</span>Studio</a
-        >
+        <a class="logo-studio" href="./index.html"><span class="logo-web">Web</span>Studio</a>
         <ul class="lists">
-          <li><a class="links" href="">Студия</a></li>
-          <li><a class="links" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="links" href="">Контакты</a></li>
+          <li><a class="links active" href="./index.html">Студия</a></li>
+          <li><a class="links active" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="links active" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul class="lists">
         <li>
-          <a class="contact-header" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+          <a class="contact-header" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
           <a class="contact-header" href="tel:+380961111111">+380961111111</a>
@@ -49,11 +45,7 @@
         <ul class="lists">
           <li>
             <a class="links-posters" href=""
-              ><img
-                src="./images/technocrack.jpg"
-                alt="Technocrack example of web"
-                width="370"
-              />
+              ><img src="./images/technocrack.jpg" alt="Technocrack" width="370" />
               <h3 class="posters">Технокряк</h3>
               <p class="description-project">Веб-сайт</p>
             </a>
@@ -71,11 +63,7 @@
           </li>
           <li>
             <a class="links-posters" href="">
-              <img
-                src="./images/restaurant.jpg"
-                alt="example of app"
-                width="370"
-              />
+              <img src="./images/restaurant.jpg" alt="example of app" width="370" />
               <h3 class="posters">Ресторан Seafood</h3>
               <p class="description-project">Приложение</p>
             </a>
@@ -96,22 +84,14 @@
           </li>
           <li>
             <a class="links-posters" href=""
-              ><img
-                src="./images/inspiration.jpg"
-                alt="Web Inspiration has no Borders example of work"
-                width="370"
-              />
+              ><img src="./images/inspiration.jpg" alt="Web Inspiration" width="370" />
               <h3 class="posters">Inspiration has no Borders</h3>
               <p class="description-project">Веб-сайт</p>
             </a>
           </li>
           <li>
             <a class="links-posters" href=""
-              ><img
-                src="./images/limited edition.jpg"
-                alt="example of designe"
-                width="370"
-              />
+              ><img src="./images/limited edition.jpg" alt="example of designe" width="370" />
               <h3 class="posters">Издание Limited Edition</h3>
               <p class="description-project">Дизайн</p>
             </a>
@@ -125,11 +105,7 @@
           </li>
           <li>
             <a class="links-posters" href=""
-              ><img
-                src="./images/business.jpg"
-                alt="example of app"
-                width="370"
-              />
+              ><img src="./images/business.jpg" alt="example of app" width="370" />
               <h3 class="posters">Growing Business</h3>
               <p class="description-project">Приложение</p>
             </a>
@@ -139,9 +115,7 @@
     </main>
 
     <footer class="footer">
-      <a class="logo-studio-footer" href="./index.html"
-        ><span class="logo-web">Web</span>Studio</a
-      >
+      <a class="logo-studio-footer" href="./index.html"><span class="logo-web">Web</span>Studio</a>
       <address class="footer-address">
         <ul class="lists">
           <li>
@@ -154,16 +128,12 @@
             >
           </li>
           <li>
-            <a
-              class="links-footer contact-footer"
-              href="mailto:info@devstudio.com"
+            <a class="links-footer contact-footer" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="links-footer contact-footer" href="tel:+380961111111"
-              >+380961111111</a
-            >
+            <a class="links-footer contact-footer" href="tel:+380961111111">+380961111111</a>
           </li>
         </ul>
       </address>
